# 8086cpu

./: .gitignore  8086cpu.sln  CMakeLists.txt  Readme.md
8086cpu/: 8086cpu.vcxproj  8086cpu.vcxproj.filters  AbstractPresenter.h  ConsolePresenter.cpp  ConsolePresenter.h  Constants.h  CreateLabFrame.cpp  CreateLabFrame.h  DescriptionDialog.cpp  DescriptionDialog.h  DescriptionFrame.cpp  DescriptionFrame.h  EmulatorApp.cpp  GenReg.cpp  GenReg.h  GraphicConstants.h  MainFrame.cpp  MainFrame.h  Memory.cpp  Memory.h  Tester.cpp  Tester.h  TestingModule.cpp  TestingModule.h  VerifyLabFrame.cpp  VerifyLabFrame.h  cpu8086.cpp  cpu8086.h  main.cpp
src/: CMakeLists.txt
src/emulator/hdr/: TestingModule.h
src/gui/cpp/: DescriptionDialog.cpp  main.cpp
src/gui/hdr/: Constants.h  CreateLabFrame.h  DescriptionDialog.h  EmulatorApp.h  GraphicConstants.h  MainFrame.h  VerifyLabFrame.h
